<resources>
    <string name="app_name">Survey Portal</string>
    <string name="sign_in">Sign In</string>
    <string name="facebook">Facebook</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="google">Google +</string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="facebook_app_id">224851737882231</string>
    <!--// if your App ID is 1234567, you should use fb1234567-->
    <string name="fb_login_protocol_scheme">fbAPP_ID</string>
    <string name="title_activity_main_screen">MainScreen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="already_register_login">Already register ?<u>Login</u></string>
    <string name="title_activity_survey_launcher">SurveyLauncher</string>
    <string name="sign_up">Sign Up</string>


    <string name="textview1">Welcome!</string>
    <string name="textview2">Welcome to Creed Global</string>
    <string name="textview3">Create</string>
    <string name="textview4">Create Your Own Surveys</string>
    <string name="textview5">Create your survey and use the insights to make better decisions.</string>
    <string name="button1">Create Survey</string>
    <string name="imageview1">true</string>
    <string name="textview6">Survey Portal</string>
    <string name="textview7">Market Review?</string>
    <string name="textview8">Take feeback,Review it,Make better decisions!</string>
    <string name="title_activity_survey_details">Survey_details</string>
    <string name="edittext3">Enter your Survey Name</string>
    <string name="button0">Done</string>
    <string name="enter_your_question">Enter Your Question</string>
    <string name="title_activity_result">Result</string>
    <string name="submit">Submit</string>

</resources>
