<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.creedglobal.survey.surveyportal.MainActivity"
    android:nestedScrollingEnabled="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="20dp">
        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/viewFlipper"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:animateFirstView="false"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/email_address"
            android:background="@android:drawable/editbox_background_normal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:background="@android:drawable/editbox_background_normal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/com_facebook_tooltip_blue_background"
            android:onClick="gotoHome" />


        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:visibility="gone" />
        <!--<com.facebook.login.widget.LoginButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/facebook"-->
            <!--android:textAllCaps="false"-->
            <!--android:id="@+id/login_button"-->
            <!--android:layout_gravity="center_horizontal" />-->





        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/com_facebook_tooltip_blue_background"
            android:onClick="gotoRegister" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:id="@+id/textView"
            android:onClick="gotoInfox" />


    </RelativeLayout>
</RelativeLayout>
</ScrollView>